<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Register"
    tools:showIn="@layout/activity_profile"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        style="@style/centreLocatorCardDesign"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="726dp"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">


            <ImageView
                android:id="@+id/iv_P_Profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile" />


            <Button
                android:id="@+id/btn_P_ProfilePic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:text="..."
                android:textColor="@color/black" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_p_email"
                    style="@style/modifiedEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_p_f_name"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:hint="@string/fname" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_p_l_name"
                    style="@style/modifiedEditText"
                    android:hint="@string/lname" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_p_mobile"
                    style="@style/modifiedEditText"
                    android:hint="@string/mobno"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_p_password"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/centre_button"
                android:text="@string/update"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
