<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_java_more"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/cardLayout1"
        android:layout_below="@+id/cardLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/j1"
            style="@style/centreLocatorCardDesign"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/javaimgmin"/>

                <TextView
                    android:id="@+id/txt_javapoint"
                    style="@style/reportContentText"
                    android:text="@string/javatpoint"
                    android:gravity="center"
                    android:textColor="#25C0DE"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/j2"
            style="@style/centreLocatorCardDesign"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/javaimgmin"/>

                <TextView
                    android:id="@+id/txt_tutorialpoint"
                    style="@style/reportContentText"
                    android:gravity="center"
                    android:text="@string/tutorialspoint"
                    android:textColor="#25C0DE" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/j3"
            style="@style/centreLocatorCardDesign"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/javaimgmin"/>

                <TextView
                    android:id="@+id/txt_edureka"
                    style="@style/reportContentText"
                    android:gravity="center"
                    android:text="@string/edureka"
                    android:textColor="#25C0DE" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>





</androidx.core.widget.NestedScrollView>
